# dceapi-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  complete.rs
src/: client.rs  config.rs  error.rs  http.rs  lib.rs  models.rs  token.rs
src/services/: common.rs  delivery.rs  market.rs  member.rs  mod.rs  news.rs  settle.rs  trade.rs
