[package]
name = "dceapi-rs"
version = "0.1.1"
edition = "2021"
authors = ["Pseudo <pseudocodes@gmail.com>"]
description = "Dalian Commodity Exchange (DCE) API client library"
license = "MIT"
repository = "https://github.com/pseudocodes/dceapi-rs"
keywords = ["dce", "exchange", "futures", "options", "commodity"]
categories = ["api-bindings", "finance"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "complete"
path = "examples/complete.rs"
